# datatonFach

./: .gitignore  README.md  pyproject.toml  requirements.txt
interface/: Cuantificación_de_incendios.py  app.py
interface/pages/: Predicción_de_riesgo.py
interface/rasters/elevation/: 20140923_valpo_elevation.tif  20190909_valpo_elevation.tif
interface/rasters/lansat/: dnbr_2023_2024_discretised copy.tif  dnbr_2023_2024_discretised.tif  dnbr_discretised.tif
interface/rasters/predictions/: valpo_prediction_1.tif  valpo_prediction_2.tif
interface/utils/: cuantificacion.py  prueba_cuantifiacion.ipynb
interface/views/: prediction.py  quantification.py
notebooks/: hackathon-fach-baseline-resnet18-fulldataset.ipynb
src/: create_input_images.py  create_train_dataset.py  faiss_knn.py  featurizer_dinov2.py  geo_utils.py  pixels_count.ipynb  pixels_count.py  predict_knn_dinov2.py  raster_sliding_window_predict.py  run_validation.py  train_model_from_features.py
