[tool.poetry]
name = "datatonfach"
version = "0.1.0"
description = ""
authors = ["Benjamin Henriquez Soto <benja20029@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rasterio = "^1.3.9"
streamlit = "^1.33.0"
rioxarray = "^0.15.3"
leafmap = "^0.31.7"
localtileserver = "^0.10.2"
psutil = "^5.9.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
